@@ -42,6 +42,7 @@
 	</tr>
 </table>
 
+<jwc id="publisherScript"/>
 
 </jwc>
 
